--- a/index4.html
+++ b/index4.html
@@ -139,7 +139,8 @@
         <div class="audio-player-container p-4 mb-8 rounded-xl w-full md:w-3/4 lg:w-1/2 mx-auto">
             <h3 class="text-xl font-semibold text-gray-100 mb-3">Phase 4 Audio Overview</h3>
             <div class="custom-audio-player">
-                <audio id="audioPlayer" src="P4audio.mp3" preload="auto"></audio>
+                <!-- Audio source updated to audio.mp3 -->
+                <audio id="audioPlayer" src="audio.mp3" preload="auto"></audio>
                 
                 <button id="playPauseBtn" class="play-pause-btn">
                     <i id="playPauseIcon" class="fas fa-play"></i>
